--- a/Mom to be/Mom to be/groups.html
+++ b/Mom to be/Mom to be/groups.html
@@ -3,9 +3,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Groups</title>
+  <title>Report</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  
+
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/framework.css">
   <link rel="stylesheet" type="text/css" href="css/washington.css">
@@ -140,7 +140,7 @@
             <div class="separator-bottom"></div>
           </nav>
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Groups</div>
+          <div class="navbar-title">Report</div>
           <div class="w-nav-button navbar-button left" id="menu-button" data-ix="hide-navbar-icons">
             <div class="navbar-button-icon home-icon">
               <div class="bar-home-icon"></div>
