--- a/Mom to be/Mom to be/news.html
+++ b/Mom to be/Mom to be/news.html
@@ -3,9 +3,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>News</title>
+  <title>Article</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  
+
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/framework.css">
   <link rel="stylesheet" type="text/css" href="css/washington.css">
@@ -30,7 +30,7 @@
       <div class="w-nav navbar" data-collapse="all" data-animation="over-left" data-duration="400" data-contain="1" data-easing="ease-out-quint" data-no-scroll="1">
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">News</div>
+          <div class="navbar-title">Article</div>
           <a class="w-inline-block navbar-button right" href="#" data-ix="search-box">
             <div class="navbar-button-icon icon ion-ios-plus-empty"></div>
           </a>
