--- a/Mom to be/Mom to be/news.html
+++ b/Mom to be/Mom to be/news.html
@@ -69,17 +69,17 @@
             <a class="w-inline-block" href="newitem.html" data-load="1">
               <div class="image-new"></div>
               <div class="text-new">
-                <h2 class="title-new">Apple products unleashed</h2>
-                <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat....</p><a class="category-link" href="#">PRODUCTIVITY</a><a class="category-link" href="#">BUSINESS</a>
+                <h2 class="title-new">Take a rest and do Yoga</h2>
+                <p class="description-new">It's important that you find the right yoga practice and exercises for you. Whether it be going to studio, or developing your own practice at home. Listen to your body and do what feels right to you ...</p>
               </div>
             </a>
           </li>
           <li class="list-item-new">
-            <a class="w-inline-block" href="newitem.html" data-load="1">
+            <a class="w-inline-block" href="food.html" data-load="1">
               <div class="image-new bg1"></div>
               <div class="text-new">
-                <h2 class="title-new">Travel tips for Africa adventures surviving in the desert</h2>
-                <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat....</p><a class="category-link" href="#">PRODUCTIVITY</a><a class="category-link" href="#">BUSINESS</a>
+                <h2 class="title-new">Eat right feel amazing</h2>
+                <p class="description-new">Healthy choices for you and your little baby</p>
               </div>
             </a>
           </li>
@@ -87,8 +87,8 @@
             <a class="w-inline-block" href="newitem.html" data-load="1">
               <div class="image-new bg2"></div>
               <div class="text-new">
-                <h2 class="title-new">Superfruits for a longer and stronger health.</h2>
-                <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat....</p><a class="category-link" href="#">PRODUCTIVITY</a><a class="category-link" href="#">BUSINESS</a>
+                <h2 class="title-new">Healthy Happy and Pregnant</h2>
+                <p class="description-new">A mother's joy begins when new life is stirring inside .. when a heart beat is heard for the first time, and little kicks that reminds her she's never alone. few tips to keep you (mommy) and your baby healthy</p>
               </div>
             </a>
           </li>
