--- a/Mom to be/Mom to be/chat.html
+++ b/Mom to be/Mom to be/chat.html
@@ -45,14 +45,14 @@
             </div>
             <div class="w-clearfix column-right chat">
               <div class="arrow-globe"></div>
-              <div class="chat-text">Yesterday I went to see Mike, he has just arrived to the city he is a cool dude! you will meet him soon...</div>
+              <div class="chat-text">I would like to schedule an appointment for you to come in and talk with me.</div>
               <div class="chat-time">3 mins ago</div>
             </div>
           </li>
           <li class="list-chat right" data-ix="list-item">
             <div class="w-clearfix column-right chat right">
               <div class="arrow-globe right"></div>
-              <div class="chat-text right">Great! how was it? what did you do?</div>
+              <div class="chat-text right">Is something wrong with me?!</div>
               <div class="chat-time right">3 min ago</div>
             </div>
           </li>
@@ -63,14 +63,14 @@
             </div>
             <div class="w-clearfix column-right chat">
               <div class="arrow-globe"></div>
-              <div class="chat-text">I went to his brother’s house.</div>
+              <div class="chat-text">No, sometime the test results aren’t clear and we need to do more to get a clearer picture.</div>
               <div class="chat-time">1 min ago</div>
             </div>
           </li>
           <li class="list-chat right" data-ix="list-item">
             <div class="w-clearfix column-right chat right">
               <div class="arrow-globe right"></div>
-              <div class="chat-text right">Oh my god!</div>
+              <div class="chat-text right">Can we talk about it now?!</div>
               <div class="chat-time right">50 sec ago</div>
             </div>
           </li>
@@ -81,22 +81,15 @@
             </div>
             <div class="w-clearfix column-right chat">
               <div class="arrow-globe"></div>
-              <div class="chat-text">it was great, we had so much fun playing some games.</div>
+              <div class="chat-text">I would if I knew anything for sure, but I want to take a second look.</div>
               <div class="chat-time">30 sec ago</div>
             </div>
           </li>
           <li class="list-chat right" data-ix="list-item">
             <div class="w-clearfix column-right chat right">
               <div class="arrow-globe right"></div>
-              <div class="chat-text right">douh! what sort of games...?</div>
+              <div class="chat-text right">When can I come and see you?</div>
               <div class="chat-time right">20 sec ago</div>
-            </div>
-          </li>
-          <li class="list-chat right" data-ix="list-item">
-            <div class="w-clearfix column-right chat right">
-              <div class="arrow-globe right"></div>
-              <div class="chat-text right">I mean...</div>
-              <div class="chat-time right">15 sec ago</div>
             </div>
           </li>
           <li class="w-clearfix list-chat" data-ix="list-item">
@@ -106,14 +99,14 @@
             </div>
             <div class="w-clearfix column-right chat">
               <div class="arrow-globe"></div>
-              <div class="chat-text">We played COD 3 and Batelfield, it was a proper war mate! hahah</div>
+              <div class="chat-text">You can come in this afternoon.</div>
               <div class="chat-time">7 sec ago</div>
             </div>
           </li>
           <li class="list-chat right" data-ix="list-item">
             <div class="w-clearfix column-right chat right">
               <div class="arrow-globe right"></div>
-              <div class="chat-text right">oh!! cool!</div>
+              <div class="chat-text right">I will! thanks!</div>
               <div class="chat-time right">just now</div>
             </div>
           </li>
