--- a/Mom to be/Mom to be/messages.html
+++ b/Mom to be/Mom to be/messages.html
@@ -185,6 +185,29 @@
               </div>
             </a>
           </li>
+        </li>
+        <li class="list-message" data-ix="list-item">
+            <div class="w-clearfix column-left">
+              <div class="image-message"><img src="images/chat.png">
+              </div>
+            </div>
+            <div class="column-right">
+              <div class="message-title">Chat</div>
+              <div class="message-text">A new message</div>
+            </div>
+          </a>
+        </li>
+        <li class="list-message" data-ix="list-item">
+            <div class="w-clearfix column-left">
+              <div class="image-message"><img src="images/calendar.png">
+              </div>
+            </div>
+            <div class="column-right">
+              <div class="message-title">Appointments</div>
+              <div class="message-text">Your Appointment is confirmed</div>
+            </div>
+          </a>
+        </li>
         </ul>
       </div>
     </div>
