--- a/Mom to be/Mom to be/done/about-us.html
+++ b/Mom to be/Mom to be/done/about-us.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>About Us</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  
+
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/framework.css">
   <link rel="stylesheet" type="text/css" href="css/washington.css">
@@ -18,8 +18,8 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/logoStandford32.ico">
-  <link rel="apple-touch-icon" href="images/logoStandford32.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="images/w.png">
+  <link rel="apple-touch-icon" href="images/w.png">
 
   <link href="css/ionicons.min.css" rel="stylesheet" type="text/css" />
 </head>
@@ -154,15 +154,15 @@
         <div class="bottom-section padding text-centered">
           <div class="logo-login smaller"></div>
           <div class="text-centered">
-            <h5>Washington</h5>
+            <h5>Mom To Be</h5>
           </div>
-          <div class="version-text">Version: 2.0</div>
-          <p>Built by Sensation Themes
-            <br>Washington App, The Latest Sensation Mobile App Template. Can be used with IOS, Android and even for mobile web.</p>
+          <div class="version-text">Version: 1.0</div>
+          <p>Built by Survivors Team
+            <br>Mom To Be App, Health-care information system . Can be used with IOS, Android and even for mobile web.</p>
           <div class="separator-button"></div>
           <div class="separator-button"></div><a class="action-button grey" href="#">Rate this App</a>
           <div class="separator-button"></div>
-          <div class="link-upper">SENSATIONTHEMES.COM</div>
+          <div class="link-upper">© 2017 W-Hospital</div>
           <div class="separator-bottom"></div>
         </div>
       </div>
