--- a/Mom to be/Mom to be/advice.html
+++ b/Mom to be/Mom to be/advice.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Yoga</title>
+  <title>Pregnancy care</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -30,7 +30,7 @@
       <div class="w-nav navbar" data-collapse="all" data-animation="over-left" data-duration="400" data-contain="1" data-easing="ease-out-quint" data-no-scroll="1">
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Yoga and exercise</div>
+          <div class="navbar-title">Health care</div>
           <a class="w-inline-block navbar-button" href="news.html" data-load="1">
             <div class="navbar-button-icon icon ion-ios-close-empty"></div>
           </a>
@@ -39,32 +39,22 @@
       <div class="body">
         <div class="news-container item-new">
           <div>
-            <div class="w-slider hero-slider" data-animation="slide" data-duration="500" data-infinite="1" data-nav-spacing="5" data-delay="4000" data-autoplay="1">
-              <div class="w-slider-mask">
-                <div class="w-slide slide"></div>
-                <div class="w-slide slide bg2"></div>
-              </div>
-              <div class="w-slider-arrow-left arrow-icon">
-                <div class="w-icon-slider-left"></div>
-              </div>
-              <div class="w-slider-arrow-right arrow-icon">
-                <div class="w-icon-slider-right"></div>
-              </div>
-              <div class="w-slider-nav w-round slider-bullets"></div>
-            </div>
+
             <div class="text-new">
               <div class="separator-fields"></div>
-              <h2 class="title-new">Apple products unleashed</h2>
+              <h2 class="title-new">Healthy food</h2>
+              <div class="separator-fields"></div><img src="images/eat.jpg">
+              <div class="separator-fields"></div>
               <div class="separator-fields"></div>
               <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat.
                 <br>
                 <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.
                 <br>
-                <br>Eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat,&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nuna.</p>
+              </p>
               <div class="separator-button"></div>
               <h2 class="title-new">Apple products unleashed</h2>
               <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.</p>
-              <div class="separator-fields"></div><img src="images/exerc.png">
+              <div class="separator-fields"></div><img src="images/eat.jpg">
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
               <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.
