--- a/Mom to be/Mom to be/news.html
+++ b/Mom to be/Mom to be/news.html
@@ -66,7 +66,7 @@
       <div class="news-container">
         <ul class="w-clearfix list-news">
           <li class="list-item-new">
-            <a class="w-inline-block" href="newitem.html" data-load="1">
+            <a class="w-inline-block" href="yoga.html" data-load="1">
               <div class="image-new"></div>
               <div class="text-new">
                 <h2 class="title-new">Take a rest and do Yoga</h2>
@@ -84,7 +84,7 @@
             </a>
           </li>
           <li class="list-item-new">
-            <a class="w-inline-block" href="newitem.html" data-load="1">
+            <a class="w-inline-block" href="avdice.html" data-load="1">
               <div class="image-new bg2"></div>
               <div class="text-new">
                 <h2 class="title-new">Healthy Happy and Pregnant</h2>
