--- a/Mom to be/Mom to be/food.html
+++ b/Mom to be/Mom to be/food.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Exercises</title>
+  <title>Food</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -30,7 +30,7 @@
       <div class="w-nav navbar" data-collapse="all" data-animation="over-left" data-duration="400" data-contain="1" data-easing="ease-out-quint" data-no-scroll="1">
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Food</div>
+          <div class="navbar-title">Healthy eating</div>
           <a class="w-inline-block navbar-button" href="news.html" data-load="1">
             <div class="navbar-button-icon icon ion-ios-close-empty"></div>
           </a>
@@ -43,53 +43,23 @@
             <div class="text-new">
               <div class="separator-fields"></div>
               <h2 class="title-new">Stay Healthy</h2>
-              <div class="separator-fields"></div>
-              <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat.
-                <br>
-                <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.
-                <br>
-                <br>Eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat,&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nuna.</p>
-              <div class="separator-button"></div>
-              <h2 class="title-new">Apple products unleashed</h2>
-              <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.</p>
               <div class="separator-fields"></div><img src="images/eat.jpg">
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
-              <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.
-                <br>
-                <br>Eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat,&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nuna.</p>
-              <div class="separator-button"></div><a class="category-link" href="#">PRODUCTIVITY</a><a class="category-link" href="#">BUSINESS</a>
+              <p class="description-new">talk about important food</p>
+              <div class="separator-button"></div>
+
+              <h2 class="title-new">what helps the baby</h2>
+              <div class="separator-fields"></div><img src="images/eat.jpg">
+              <div class="separator-fields"></div>
+              <div class="separator-fields"></div>
+              <p class="description-new">smth helpfull</p>
+              <div class="separator-fields"></div>
+              <div class="separator-fields"></div>
+
               <div class="separator-button"></div>
               <div class="separator-button"></div>
-              <div class="w-clearfix">
-                <div class="w-widget w-widget-facebook social-block">
-                  <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Fsensationthemes&amp;layout=button_count&amp;locale=en_US&amp;action=like&amp;show_faces=false&amp;share=false" scrolling="no" frameborder="0" allowtransparency="true" style="border: none; overflow: hidden; width: 92px; height: 20px;"></iframe>
-                </div>
-                <div class="w-widget w-widget-twitter social-block">
-                  <iframe src="https://platform.twitter.com/widgets/tweet_button.html#url=http%3A%2F%2Fsensationthemes.com&amp;counturl=sensationthemes.com&amp;text=Check%20out%20this%20site&amp;count=horizontal&amp;size=m&amp;dnt=true" scrolling="no" frameborder="0" allowtransparency="true" style="border: none; overflow: hidden; width: 110px; height: 20px;"></iframe>
-                </div>
-                <div class="w-widget w-widget-gplus social-block">
-                  <div class="g-plusone" data-href="http://sensationthemes.com" data-size="medium" data-annotation="bubble" data-width="120" data-recommendations="false" id="___plusone_5" style="width: 90px; height: 20px; text-indent: 0px; margin: 0px; padding: 0px; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; background: transparent;"></div>
-                </div>
-              </div>
-              <div class="separator-bottom"></div>
-            </div>
-            <div class="w-clearfix options-new">
-              <a class="w-clearfix w-inline-block small-button" href="#">
-                <div class="icon-button">
-                  <div class="icon ion-android-favorite-outline"></div>
-                </div>
-                <div class="text-button">LIKE</div>
-              </a>
-              <a class="w-clearfix w-inline-block small-button grey" href="#">
-                <div class="icon-button bigger">
-                  <div class="icon ion-ios-plus-empty"></div>
-                </div>
-                <div class="text-button">ADD&nbsp;TO&nbsp;FAVORITES</div>
-              </a>
-              <a class="w-clearfix w-inline-block small-button icon-only grey right" href="#">
-                <div class="icon-button">
-                  <div class="icon ion-ios-more bigger"></div>
+
                 </div>
               </a>
             </div>
