--- a/Mom to be/Mom to be/settings.html
+++ b/Mom to be/Mom to be/settings.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Settings</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  
+
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/framework.css">
   <link rel="stylesheet" type="text/css" href="css/washington.css">
@@ -18,8 +18,8 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/logoStandford32.ico">
-  <link rel="apple-touch-icon" href="images/logoStandford32.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="images/w.png">
+  <link rel="apple-touch-icon" href="images/w.png">
 
   <link href="css/ionicons.min.css" rel="stylesheet" type="text/css" />
 </head>
@@ -175,59 +175,23 @@
               <div class="separator-fields"></div>
             </div>
             <div>
+              <label class="label-form" for="birthday-field">MY BABY'S NAMES</label>
+              <input class="w-input input-form" id="birthday-field" type="text" name="birthday" data-name="birthday" required="required">
+              <div class="separator-fields"></div>
+            </div>
+            <div>
               <div class="w-clearfix input-form one-line">
                 <label class="label-form middle" for="email">GENDER</label>
                 <div class="w-clearfix radios-container">
                   <div class="w-radio w-clearfix radio-button">
-                    <div class="radio-bullet-replacement"></div>
+                    <div class="radio-bullet-replacement "></div>
                     <input class="w-radio-input radio-bullet" id="node" type="radio" name="Radio1" value="1" data-name="Radio1">
-                    <label class="w-form-label" for="node">Female</label>
+                    <label class="w-form-label" for="node">BOY</label>
                   </div>
                   <div class="w-radio w-clearfix radio-button">
-                    <div class="radio-bullet-replacement checked"></div>
+                    <div class="radio-bullet-replacement girl  ckecked"></div>
                     <input class="w-radio-input radio-bullet" id="node-2" type="radio" name="Radio1" value="0" data-name="Radio1">
-                    <label class="w-form-label" for="node-2">Male</label>
-                  </div>
-                </div>
-              </div>
-              <div class="separator-fields"></div>
-            </div>
-            <div>
-              <div class="w-clearfix input-form one-line">
-                <label class="label-form middle" for="email">ALERTS AT</label>
-                <div class="w-clearfix radios-container">
-                  <div class="w-radio w-clearfix radio-button">
-                    <div class="radio-bullet-replacement checked"></div>
-                    <input class="w-radio-input radio-bullet" id="node-4" type="radio" name="Radio2" value="1" data-name="Radio2">
-                    <label class="w-form-label" for="node-4">Evening</label>
-                  </div>
-                  <div class="w-radio w-clearfix radio-button">
-                    <div class="radio-bullet-replacement"></div>
-                    <input class="w-radio-input radio-bullet" id="node-3" type="radio" name="Radio2" value="0" data-name="Radio2">
-                    <label class="w-form-label" for="node-3">Morning</label>
-                  </div>
-                </div>
-              </div>
-              <div class="separator-fields"></div>
-            </div>
-            <div>
-              <div class="w-clearfix input-form one-line">
-                <label class="label-form middle" for="email">ACTIVITY</label>
-                <div class="w-clearfix radios-container">
-                  <div class="w-radio w-clearfix radio-button">
-                    <div class="radio-bullet-replacement"></div>
-                    <input class="w-radio-input radio-bullet" id="node-9" type="radio" name="Radio3" value="2" data-name="Radio3">
-                    <label class="w-form-label" for="node-9">High</label>
-                  </div>
-                  <div class="w-radio w-clearfix radio-button">
-                    <div class="radio-bullet-replacement checked"></div>
-                    <input class="w-radio-input radio-bullet" id="node-6" type="radio" name="Radio3" value="1" data-name="Radio3">
-                    <label class="w-form-label" for="node-6">Mid</label>
-                  </div>
-                  <div class="w-radio w-clearfix radio-button">
-                    <div class="radio-bullet-replacement"></div>
-                    <input class="w-radio-input radio-bullet" id="node-5" type="radio" name="Radio3" value="0" data-name="Radio3">
-                    <label class="w-form-label" for="node-5">Low</label>
+                    <label class="w-form-label" for="node-2">GIRL</label>
                   </div>
                 </div>
               </div>
