--- a/Mom to be/Mom to be/yoga.html
+++ b/Mom to be/Mom to be/yoga.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/framework.css">
-  <link rel="stylesheet" type="text/css" href="css/washington.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/webfont.js"></script>
   <script>
     WebFont.load({
@@ -54,7 +54,7 @@
             </div>
             <div class="text-new">
               <div class="separator-fields"></div>
-              
+
               <h2 class="title-new">Importance</h2>
               <div class="separator-fields"></div>
               <p class="description-new"> As baby grows within our body, more energy and strength is needed to be able to carry the weight. Yoga poses strengthen our hips, back, arms and shoulders.
