--- a/Mom to be/Mom to be/login.html
+++ b/Mom to be/Mom to be/login.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/framework.css">
-  <link rel="stylesheet" type="text/css" href="css/washington.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/webfont.js"></script>
   <script>
     WebFont.load({
@@ -32,14 +32,14 @@
         <div class="logo-login"></div>
         <div class="bottom-section padding">
           <div class="w-form">
-            <form id="submit-form" name="email-form" data-name="Email Form" data-redirect="settings.html" action="#">
+            <form id="submit-form" name="Nid-form" data-name="Nid Form" data-redirect="settings.html" action="#">
               <div>
-                <label class="label-form" for="email-field">USERNAME</label>
-                <input class="w-input input-form" id="email-field" type="email" name="email" data-name="email" required="required">
+                <label class="label-form" for="Nid-field">USERNAME</label>
+                <input class="w-input input-form" id="Nid-field" type="number" name="Nid" data-name="Nid" required="required">
                 <div class="separator-fields"></div>
               </div>
               <div>
-                <label class="label-form" for="email">PASSWORD</label>
+                <label class="label-form" for="Nid">PASSWORD</label>
                 <div class="w-clearfix block-input-combined">
                   <input class="w-input input-form left" id="password-field" type="password" name="password" data-name="password" required="required"><a class="right-input-link" href="forgot.html" data-load="1">Forgot Password</a>
                 </div>
