--- a/Mom to be/Mom to be/maps.html
+++ b/Mom to be/Mom to be/maps.html
@@ -3,12 +3,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Maps</title>
+  <title>Location</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/framework.css">
-  <link rel="stylesheet" type="text/css" href="css/washington.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/webfont.js"></script>
   <script>
     WebFont.load({
@@ -18,8 +18,8 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/logoStandford32.ico">
-  <link rel="apple-touch-icon" href="images/logoStandford32.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="images/w.png">
+  <link rel="apple-touch-icon" href="images/w.png">
 
   <link href="css/ionicons.min.css" rel="stylesheet" type="text/css" />
 </head>
@@ -140,7 +140,7 @@
             <div class="separator-bottom"></div>
           </nav>
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Maps</div>
+          <div class="navbar-title">Location</div>
           <div class="w-nav-button navbar-button left" id="menu-button" data-ix="hide-navbar-icons">
             <div class="navbar-button-icon home-icon">
               <div class="bar-home-icon"></div>
@@ -154,20 +154,19 @@
         <div class="news-container item-new">
           <div>
             <div class="grey-header">
-              <h2 class="grey-heading-title">Road map</h2>
+              <h2 class="grey-heading-title">Our Location</h2>
             </div>
             <div class="w-widget w-widget-map hero-map" data-widget-latlng="24.712997 , 46.622543" data-widget-style="roadmap" data-widget-zoom="12" data-widget-tooltip="We are here!"></div>
             <div class="text-new">
               <div class="separator-fields"></div>
               <h2 class="title-new">Get in contact</h2>
               <div class="separator-fields"></div>
-              <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.
+              <p class="description-new">
+                <br>Ash Shaikh Hasan Ibn Abdullah Al Ash Shaikh Street
+                <br>Ar Raid, 12372
+                <br>Saudi Arabia
                 <br>
-                <br>5, Oxford Road
-                <br>Great London, R45 18Y
-                <br>United Kingdom
-                <br>
-                <br>e: info@sensationthemes.com
+                <br>e: info@w-hosoital.com
                 <br>t: 0123456 789</p>
               <div class="separator-button"></div>
                 <div class="separator-fields"></div><a class="action-button" href="#">Contact Us</a>
