--- a/Mom to be/Mom to be/settings.html
+++ b/Mom to be/Mom to be/settings.html
@@ -175,8 +175,8 @@
               <div class="separator-fields"></div>
             </div>
             <div>
-              <label class="label-form" for="birthday-field">MY BABY'S NAMES</label>
-              <input class="w-input input-form" id="birthday-field" type="text" name="birthday" data-name="birthday" required="required">
+              <label class="label-form" for="baby-Name-field">MY BABY'S NAME</label>
+              <input class="w-input input-form" id="baby-Name-field" type="text" name="baby-Name" data-name="baby-Name" required="required">
               <div class="separator-fields"></div>
             </div>
             <div>
