--- a/Mom to be/Mom to be/terms.html
+++ b/Mom to be/Mom to be/terms.html
@@ -18,8 +18,8 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/logoStandford32.ico">
-  <link rel="apple-touch-icon" href="images/logoStandford32.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="images/w.png">
+  <link rel="apple-touch-icon" href="images/w.png">
 
   <link href="css/ionicons.min.css" rel="stylesheet" type="text/css" />
 </head>
@@ -154,54 +154,149 @@
         <div class="news-container item-new">
           <div>
             <div class="grey-header">
-              <h2 class="grey-heading-title">1. Data collection</h2>
+              <h2 class="grey-heading-title">TERMS OF SERVICES</h2>
             </div>
             <div class="text-new no-borders">
               <div>
                 <div class="separator-fields"></div>
-                <h2 class="title-new">1.1. Web forms and emails</h2>
+                <h2 class="title-new">1. ACCEPTANCE OF TERMS</h2>
                 <div class="separator-fields"></div>
-                <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat.
-                  <br>
-                  <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.
-                  <br>
-                  <br>Eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat,&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nuna.</p>
+                <p class="description-new">Please read this Agreement carefully. you acknowledge that you accept and agree to be bound by the terms of this Agreement. IF YOU DO NOT AGREE TO THESE TERMS, YOU MAY NOT ACCESS OR USE THE APP.</p>
                 <div class="separator-button"></div>
               </div>
               <div>
-                <h2 class="title-new">1.2. Data usage</h2>
                 <div class="separator-fields"></div>
-                <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat.
-                  <br>
-                  <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.
-                  <br>
-                  <br>Eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat,&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nuna.</p>
+                <h2 class="title-new">2. MEDICAL SERVICES DISCLAIMER</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">PLEASE CONSULT WITH A LICENSED PHYSICIAN OR OTHER QUALIFIED HEALTHCARE PROVIDER BEFORE MAKING ANY DECISIONS OR TAKING ANY ACTIONS THAT MAY AFFECT YOUR HEALTH AND SAFETY OR THAT OF YOUR FAMILY OR FETUS. NEVER DISREGARD PROFESSIONAL MEDICAL ADVICE OR DELAY IN SEEKING IT BECAUSE OF SOMETHING YOU HAVE READ IN CONNECTION WITH THE APP.
+                </p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">3. REGISTRATION AND ELIGIBILITY</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">To use the App, you required to have (“Account”) in W hospital and will be asked to provide certain personal information, which may include your name, gender, birth date, and e-mail address. This information will be held and used in accordance with our privacy policy.</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">4. YOUR USE OF THE APP</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">Any content you submit through the App is governed by the Company’s Privacy Policy. To the extent there is an inconsistency between this Agreement and the Company’s Privacy Policy, these Terms shall govern. If you submit a question or response, you are solely responsible for your own communications, you agree not to use the App for any purpose that is prohibited by this Agreement you agree that you SHALL NOT:
+resell, rent, lease, loan, sublicense, distribute, or otherwise transfer rights to the App;
+modify, reverse engineer, decompile or disassemble the App;
+copy, adapt, alter, modify, translate, or create derivative works of the App without written authorization of the Company;</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">4. YOUR USE OF THE APP</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">Any content you submit through the App is governed by the Company’s Privacy Policy. To the extent there is an inconsistency between this Agreement and the Company’s Privacy Policy, these Terms shall govern. If you submit a question or response, you are solely responsible for your own communications, you agree not to use the App for any purpose that is prohibited by this Agreement you agree that you SHALL NOT:
+resell, rent, lease, loan, sublicense, distribute, or otherwise transfer rights to the App;
+modify, reverse engineer, decompile or disassemble the App;
+copy, adapt, alter, modify, translate, or create derivative works of the App without written authorization of the Company;</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">5. LIMITED LICENSE TO THE APP</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">All rights, title, and interest in and to the App not expressly granted in this Agreement are reserved by the Company. If you wish to use the Company’s software, title, trade name, trademark, service mark, logo, domain name and/or any other identification with notable brand features or other content owned by the Company, you must obtain written permission from the Company. Permission requests may be sent to support@Whospital.com.</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">6. LICENSE TO USER CONTENT</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">The App enables you reservation an appointment, add your suppliments, see the laboratory tests, chat with physician  </p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">7. PASSWORDS</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">You are reasonable for taking all reasonable steps to ensure that no unauthorized person shall have access to your App passwords or account. It is your sole responsibility </p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">8. USE OF MOBILE DEVICES</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">Please note that your carrier’s normal rates and fees, such as text messaging and data charges, will still apply if you are using the App on a mobile device</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">9. THIRD PARTY SERVICES</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">The App may give you access to links to third-party websites, apps, or services (“Third Party Services”). The Company does not control Third Party Services in any manner and, accordingly, does not assume any liability associated with such Third Party Services. You need to take appropriate steps to determine whether accessing a Third Party Service is appropriate, and to protect your personal information and privacy in using any such Third Party Services.</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">QUESTIONS AND COMMENTS</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">If you have any comments or questions on any part of the services or any part of this Terms of Service, please feel free to contact us at support@Whospital.com.</p>
                 <div class="separator-button"></div>
               </div>
             </div>
             <div class="grey-header">
-              <h2 class="grey-heading-title">2. Data security</h2>
+              <h2 class="grey-heading-title">TERMS OF PRIVACY</h2>
             </div>
             <div class="text-new no-borders">
               <div>
                 <div class="separator-fields"></div>
-                <h2 class="title-new">2.1. Payments and Credit Cards</h2>
-                <div class="separator-fields"></div>
-                <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat.
-                  <br>
-                  <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.
-                  <br>
-                  <br>Eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat,&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nuna.</p>
+                <p class="description-new">Effective as of November 13, 2017
+We are committed to respecting your privacy and providing transparency about our data practices. This Privacy Policy explains how we collects, stores, uses, and discloses personal information from our users in connection with the “Mom to be” mobile application and related services.
+We reserve the right to and may change this Privacy Policy from time to time. If we make any material changes, we will notify you by email address specified when you registered, through the App, or by presenting you with a new version of this Privacy Policy for you to accept. Your continued use of the App after the effective date of an updated version of the Privacy Policy will indicate your acceptance of the Privacy Policy as modified. If you do not accept the terms of the Privacy Policy, we ask that you do not use the App. Please exit the App immediately if you do not agree to the terms of this Privacy Policy.
+</p>
                 <div class="separator-button"></div>
               </div>
               <div>
-                <h2 class="title-new">2.2. Data encryption</h2>
+                <h2 class="title-new">1. INFORMATION WE COLLECT</h2>
                 <div class="separator-fields"></div>
-                <p class="description-new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat.
-                  <br>
-                  <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.
-                  <br>
-                  <br>Eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam erat,&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolistique. Duis cursus, mi quis viverra ornare, eros dolor interdum nuna.</p>
+                <p class="description-new">Information You Provide to Us
+When you sign up to use the App, the types of personally identifiable information we may get from the hospital including your name, email address, gender of your baby, date of birth, and password, and as you use the App, you may choose to provide health-information such as your weight, body temperature, menstrual cycle dates, and other information about your health and activities (collectively, “Personal Information”). You will be able to modify and update your Personal Information in the App.
+The App will allow you to share personal stories with us of the App.
+We will not use the information gained through your use for advertising or similar services, or sell it to advertising platforms, data brokers, or information resellers. You expressly consent that we may only share such information to a third party if they are also providing a health or fitness service to you, or for medical research purposes, or for other purposes specified in this Privacy Policy and permitted under applicable agreements governing the use of the app.
+All information that you provide to us through the App is automatically uploaded to our servers and is stored there in duplicate to the information stored on your device. If you remove data from your account, you will no longer see it in the App, but some backups of the data may remain in our archive servers.
+You are responsible for ensuring the accuracy of the information that you submit to Mom to be. Inaccurate information will affect your experience when using Mom to be application and tools and our ability to contact you as described in this Privacy Policy.
+Information We Collect Automatically
+When you access or use the App, we may automatically collect the following information:
+Device Information: We collect information about the mobile device you use to access the App, including the hardware model, operating system and version, unique device identifiers and mobile network information.
+Location Information: We collect your IP address, time zone, and information about your mobile service provider, which allows us to infer your general location.</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">2. HOW WE USE INFORMATION</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">We may use your information, including your Personal Information, as follows:
+to analyze, operate, maintain and improve the App;
+to customize content you see when you use the App;
+to provide and deliver the products and services you request, process transactions and send you related information, including confirmations and reminders;
+to verify your identity;
+to send you technical notices, updates, security alerts and support and administrative messages;
+to respond to your questions in chat and requests and provide customer service;
+for any other purposes disclosed to you at the time we collect Personal Information.</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">3. SECURITY</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">We take commercially reasonable measures to protect all collected information from loss, theft, misuse and unauthorized access, disclosure, alteration and destruction. Please understand that you can help keep your information secure by choosing and protecting your password appropriately, not sharing your password and preventing others from using your mobile device. Please understand that no security system is perfect and, as such, we cannot guarantee the security of the App, or that your information won’t be intercepted while being transmitted to us. If we learn of a security systems breach, we may either post a notice, or attempt to notify you by email and will take reasonable steps to remedy the breach.
+We process information in a way that is compatible with and relevant for the purpose for which it was collected. To the extent necessary for those purposes, we take reasonable steps to ensure that any information in our care is accurate, complete, current and reliable for its intended use.</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">4. EMAIL COMMUNICATIONS</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">We may contact you from time to time via email to communicate with you about products, services, offers, promotions, rewards, and events offered by us and others, and provide news and information that we think will be of interest to you. You can always opt out of receiving emails by unsubscribing via the “Unsubscribe” link contained in the email. Opting-out of these emails will not end transmission of important service-related emails that are necessary to your use of the App.
+This Privacy Policy does not apply to information, content, business information, ideas, concepts or inventions that you send to the W Hospital by email. If you want to keep content or business information, ideas, concepts or inventions private or proprietary, do not send them in an email to the W-Hospital.</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">5. WHAT CHOICES DO I HAVE?</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">If you do not want your Personal Information used by the App or the hospital as provided in this Privacy Policy, you should not use the app. You may correct, update or review Personal Information you have submitted to the hospital, tools and applications by signing in and updating your information. If you have signed in and would like to remove your personal information from the site, you may email us at support@Whospital.com, and we will delete your Personal Information.</p>
+                <div class="separator-button"></div>
+              </div>
+              <div>
+                <h2 class="title-new">6. CONTACT US</h2>
+                <div class="separator-fields"></div>
+                <p class="description-new">If you would like to update your Personal Information, delete your account, change your preferences or have any questions or concerns about your privacy, you may contact us at support@Whospital.com. As mentioned above, if you would like to remove your personal information from our application, please contact us. Please note that some information may remain in our records after deletion of your account, including any information or records that we are legally obligated to retain or that we elect to retain for legitimate business purposes.</p>
                 <div class="separator-button"></div>
               </div>
             </div>
