--- a/Mom to be/Mom to be/addnew.html
+++ b/Mom to be/Mom to be/addnew.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Add New</title>
+  <title>Medecine</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -30,7 +30,7 @@
       <div class="w-nav navbar" data-collapse="all" data-animation="over-left" data-duration="400" data-contain="1" data-easing="ease-out-quint" data-no-scroll="1">
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Add New</div>
+          <div class="navbar-title">Add my medecine</div>
           <a class="w-inline-block navbar-button right bigger" href="todo-list.html" data-load="1">
             <div class="navbar-button-icon icon ion-ios-checkmark-empty"></div>
           </a>
@@ -46,7 +46,7 @@
             <div class="separator-fields"></div>
             <div class="background-grey"></div>
             <div class="row-input-list">
-              <label class="label-form" for="title">TITLE</label>
+              <label class="label-form" for="title">Medecine name</label>
               <input class="w-input input-form in-grey" id="title" type="text" name="title" data-name="title" required="required">
               <div class="separator-fields"></div>
             </div>
@@ -58,13 +58,13 @@
             </div>
             <div class="row-input-list">
               <label class="label-form" for="birthday-field">DATE</label>
-              <input class="w-input input-form" id="birthday-field" type="text" name="birthday" data-name="birthday" required="required">
+              <input class="w-input input-form" id="medecine-field" type="date" name="birthday" data-name="birthday" required="required">
               <div class="separator-fields"></div>
             </div>
             <div class="w-clearfix">
               <div class="row-input-list w50 left">
                 <label class="label-form" for="birthday-field">FROM</label>
-                <input class="w-input input-form" id="birthday-field" type="text" name="birthday" data-name="birthday" required="required">
+                <input class="w-input input-form" id="medecine-field" type="time" name="birthday" data-name="birthday" required="required">
                 <div class="separator-fields"></div>
               </div>
               <div class="row-input-list w50">
